--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Kayro</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
     <header class="glass-nav">
@@ -27,10 +28,12 @@
         </nav>
     </header>
 
+    <div class="background-image"></div>
+
     <section id="accueil" class="hero">
         <div class="hero-particles"></div>
         <div class="hero-content">
-            <h1 class="glitch-text">Bienvenue sur Kayro</h1>
+            <h1 class="glitch-text">Kayro</h1>
             <p class="typing-text">Une communauté Discord unique et dynamique.</p>
             <div class="cta-container">
                 <a href="https://discord.gg/kayro" class="cta-button">
@@ -50,6 +53,7 @@
             <p>Scroll pour découvrir</p>
         </div>
     </section>
+
 
     <main>
         <section id="apropos" class="about">
